# bumper_paper

./: .gitignore  README.md  Snakefile  pixi.toml
bumper/: pyproject.toml
bumper/bumper/: __init__.py  base.py  judges.py  media.py  openai.py  paths.py  threadb.py  utils.py
data/: mcv1_coverage.csv
measles/: pyproject.toml
measles/measles/: LogNormal.py  __init__.py  bumper.py  data.py  guidelines.txt  tools.py  utils.py
rugby/: pyproject.toml
rugby/rugby/: __init__.py  bumper.py  guidelines.txt  tools.py
scripts/: figure_2.py  figure_3.py  figure_3_bumper.py  figure_4.py  figure_5.py  figure_6.py  initialize.py  stability_experiments.py  state_space_experiments.py  table_2.py
