[project]
name = "measles"
version = "0.0.1"
authors = [
  { name="Niket Thakkar"},
  { name="Sonia Jindal"},
  { name="Katherine Rosenfeld"}
]
description = "Measles BUMPER"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
